--- a/fw_app.html
+++ b/fw_app.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <title>合肥app开发公司|合肥小游戏开发|合肥小程序开发|APP开发|合肥软件公司-安徽优赞科技有限公司</title>
@@ -11,20 +11,322 @@
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./css/fw_app.css">
     <script src="./js/jquery-3.3.1.js"></script>
 
 </head>
 
 <body>
-
-
-
-    <!-- 轮播 -->
-    <script src="./js/swiper.min.js" type="javascript/text"></script>
+    <div id="fw_app">
+        <div class="fw-box">
+            <header class="top-head">
+                <!-- 导航 -->
+                <div class="nav">
+                    <div class="nav-box">
+                        <div class="nav-left">
+                            <a href="./index.html">
+                                <img src="./img/logo.png" alt="有赞科技">
+                            </a>
+                        </div>
+                        <div class="nav-right">
+                            <ul class="nav-list">
+                                <li class="nav-item">
+                                    <a href="./index.html" class="nav-link">首页</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">案例</a>
+                                    <div class="nav-hid">
+                                        <ul class="hid-list">
+                                            <li class="hid-item">
+                                                <a href="./fw_app.html" class="hid-link">APP开发</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_web.html" class="hid-link">网站定制</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_wechat.html" class="hid-link">微信开发</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_ui.html" class="hid-link">UI设计</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_game.html" class="hid-link">H5游戏开发</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">行业新闻</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="./about_us.html" class="nav-link">关于我们</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">提交需求</a>
+                                </li>
+                            </ul>
+                            <ul class="nav-bar"></ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- 服务与优势 banner -->
+                <div class="fw-banner">
+                    <div class="s-con-banner">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide swiper-slide-active">
+                                <div class="banner-img" style="background-image:url(./img/fuwu_banner.jpg);"></div>
+                            </div>
+                        </div>
+                        <!-- Add Pagination -->
+                        <div class="swiper-pagination swiper-pagination-bullets"></div>
+                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    </div>
+                </div>
+            </header>
+            <!-- 主要内容 -->
+            <section class="main-content">
+                <div class="con-part-one">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">APP可以帮您实现</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">优赞科技深度了解您的需求，帮助您实现0到1，1到N</span>
+                        </div>
+                        <div class="con-main">
+                            <div class="one-des">
+                                随着移动互联技术的不断成熟，丰富的营销玩法和互动方式让用户逐渐呈现更多主动性和依赖性，企业与用户的交流也更加便捷。那么企业应该如何覆盖更多相关用户场景，持续获得流量增长，实现商业价值的整合转换？</div>
+                            <ul>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_11.png" alt="表现形式">
+                                        <div class="link-right">
+                                            <dt class="r-link">更丰富的表现形式</dt>
+                                            <dd class="r-des">App提供比传统媒介更丰富多彩的表现形式，移动设备实现前所未有的互动体验</dd>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_9.png" alt="目标定位">
+                                        <div class="link-right">
+                                            <dt class="r-link">更精确的目标定位</dt>
+                                            <dd class="r-des">基于大数据进行用户行为分析，更加精准的收集到目标群体。</dd>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_10.png" alt="用户粘性">
+                                        <div class="link-right">
+                                            <dt class="r-link">更强大的用户粘性</dt>
+                                            <dd class="r-des">App提供比传统媒介更丰富多彩的表现形式，移动设备实现前所未有的互动体验</dd>
+                                        </div>
+                                    </a>
+                                </li>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_12.png" alt="品牌互动">
+                                        <div class="link-right">
+                                            <dt class="r-link">更便捷的品牌互动</dt>
+                                            <dd class="r-des">APP端解决方案突破时间与空间的限制进行信息交换，在任意时间地点提供用户服务</dd>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-part-two">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">优赞提供的APP开发类型</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">提供APP开发、运维、及技术架构优化一站式服务</span>
+                        </div>
+                        <div class="con-main">
+                            <ul>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_13.png" alt="混合开发">
+                                        <dt>混合开发</dt>
+                                        <dd>使用H5技术框架开发APP应用，适合于创业公司或者资金短缺的公司。</dd>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_14.png" alt="IOS开发">
+                                        <dt>IOS开发</dt>
+                                        <dd>为客户提供专业的APP软件开发解决方案, 凭借多年的行业开发经验，从品牌和市场的角度, 用专业的研发技术,为企业吸引、留住用户。</dd>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_15.png" alt="安卓开发">
+                                        <dt>安卓开发</dt>
+                                        <dd>我们拥有专业的研发团对，可根据客户提出的 各项需求提供高品质APP开发解决方案！使得企 业服务更加便捷智能，提示企业品牌价值。</dd>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-part-thr">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">我们积累了各行业丰富的经验和案例</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">优赞可为企业提供一体化APP解决方案，并注重技术成长和产品体验。通过成熟稳定的技术方式，帮助运营者覆盖更多用户场景，轻松应对包括营销、运维在内的多种技术挑战。促进有效流量的吸收和转换，展现品牌形象理念，满足企业管理、运营、营销等多样化诉求。</span>
+                            <span class="title-des">目前，优赞科技作为移动互联网领域提供一站式的多平台解决方案领导者，服务超过800位海内外客户，当中包括众多知名品牌、国际品牌。</span>
+                        </div>
+                        <div class="con-main">
+                            <ul>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/img_6.png" alt="混合开发">
+                                        <dt>牌猫</dt>
+                                        <dd>牌猫app是中国第一款牌友社交APP，是一种针对牌友的社交方式。寻找身边的在线牌友，还可以线上观看牌艺名师视频，线下预约并欣赏牌艺名师的牌技表演。</dd>
+                                    </a>
+                                </li>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/img_7.png" alt="IOS开发">
+                                        <dt>海丰快贷</dt>
+                                        <dd>海丰快贷app是一款帮助用户快速贷款的软件，包含借款、还款、记录等服务模块，用户可以按需求自主选择借款金额，解决你的燃眉之需。</dd>
+                                    </a>
+                                </li>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/img_8.png" alt="安卓开发">
+                                        <dt>奢站</dt>
+                                        <dd>奢站app是一款二手奢侈品购物应用，海量二手奢侈品在线预览，满足用户需求，并且用户也可以在平台发布闲置的奢侈品或在线售卖，方便实用。</dd>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-us">
+                    <div class="part-box">
+                        <h3 class="contact-title">
+                            <div class="title-zh">联系我们</div>
+                            <div class="title-en">CONTACT US</div>
+                        </h3>
+                        <div class="contact-des">马上提交需求，我们会在24小时内联系您，并提供产品咨询和项目报价！</div>
+                        <span class="submit-xuqiu">
+                            <a href="#" class="submit-link">提交需求</a>
+                        </span>
+                    </div>
+                </div>
+            </section>
+            <!-- footer -->
+            <footer class="footer">
+                <div class="part-box">
+                    <div class="col-one">
+                        <h1 class="title">相关链接</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">项目案例</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">关于我们</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">提交需求</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">加入我们</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-two">
+                        <h1 class="title">优赞服务</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="./fw_app.html" class="footer-link">APP开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_web.html" class="footer-link">网站定制</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_wechat.html" class="footer-link">微信开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_ui.html" class="footer-link">UI设计</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_game.html" class="footer-link">H5游戏开发</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-thr">
+                        <h1 class="title">行业新闻</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">APP开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">微信开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">UI设计</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">营销推广</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">常见问题</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-four">
+                        <h1 class="title">关于优赞</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">公司介绍</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">联系我们</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">团队服务</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">企业动态</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-five">
+                        <h1 class="title">联系我们</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a class="footer-link">187-5510-5171</a>
+                            </li>
+                            <li class="footer-item">
+                                <a class="footer-link">980086844@qq.com</a>
+                            </li>
+                            <li class="footer-item wechat">
+                                <a class="footer-link">公众号微信号</a>
+                                <img src="./img/code.png" alt="二维码">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
     <!-- 主入口 -->
-    <script src="./js/index.js" type="javascript/text"></script>
+    <script src="./js/index.js"></script>
+    <!-- 动画 -->
+    <script src="./js/animation.js"></script>
 
 </body>
 
