--- a/fw_web.html
+++ b/fw_web.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <title>合肥app开发公司|合肥小游戏开发|合肥小程序开发|APP开发|合肥软件公司-安徽优赞科技有限公司</title>
@@ -11,20 +11,305 @@
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./css/fw_web.css">
     <script src="./js/jquery-3.3.1.js"></script>
 
 </head>
 
 <body>
-
-
-
-    <!-- 轮播 -->
-    <script src="./js/swiper.min.js" type="javascript/text"></script>
+    <div id="fw_web">
+        <div class="fw-box">
+            <header class="top-head">
+                <!-- 导航 -->
+                <div class="nav">
+                    <div class="nav-box">
+                        <div class="nav-left">
+                            <a href="./index.html">
+                                <img src="./img/logo.png" alt="有赞科技">
+                            </a>
+                        </div>
+                        <div class="nav-right">
+                            <ul class="nav-list">
+                                <li class="nav-item">
+                                    <a href="./index.html" class="nav-link">首页</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">案例</a>
+                                    <div class="nav-hid">
+                                        <ul class="hid-list">
+                                            <li class="hid-item">
+                                                <a href="./fw_app.html" class="hid-link">APP开发</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_web.html" class="hid-link">网站定制</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_wechat.html" class="hid-link">微信开发</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_ui.html" class="hid-link">UI设计</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_game.html" class="hid-link">H5游戏开发</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">行业新闻</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="./about_us.html" class="nav-link">关于我们</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">提交需求</a>
+                                </li>
+                            </ul>
+                            <ul class="nav-bar"></ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- 服务与优势 banner -->
+                <div class="fw-banner">
+                    <div class="s-con-banner">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide swiper-slide-active">
+                                <div class="banner-img" style="background-image:url(./img/fuwu_banner.jpg);"></div>
+                            </div>
+                        </div>
+                        <!-- Add Pagination -->
+                        <div class="swiper-pagination swiper-pagination-bullets"></div>
+                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    </div>
+                </div>
+            </header>
+            <!-- 主要内容 -->
+            <section class="main-content">
+                <div class="con-part-one">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">为什么要做网站</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">为企业量身打造省钱、赚钱的工具</span>
+                        </div>
+                        <div class="con-main">
+                            <ul>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_40.png" alt="" class="one-img">
+                                        <dt>提高企业知名度</dt>
+                                        <dd>企业大事件网络同步宣传，有利于提升企业品牌形象</dd>
+                                    </a>
+                                </li>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_39.png" alt="" class="one-img">
+                                        <dt>提升订单量</dt>
+                                        <dd>快速搜索引擎抓取，让有需求的客户马上找到你</dd>
+                                    </a>
+                                </li>
+                                <li class="one-item">
+                                    <a class="one-link">
+                                        <img src="./img/icon_41.png" alt="" class="one-img">
+                                        <dt>降低获客成本</dt>
+                                        <dd>线上网络推广宣传，低成本获客企业效益更好</dd>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-part-two">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">6大核心优势</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">优赞科技，给您定制化的建站服务</span>
+                        </div>
+                        <div class="con-main">
+                            <ul>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_34.png" alt="1" class="two-img">
+                                        <dt>独特创意+科学艺术，打造精品网站</dt>
+                                        <dd>网站的创意设计、布局设计、色彩处理、动画效果</dd>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_35.png" alt="2" class="two-img">
+                                        <dt>成熟独到的网站策划方法论</dt>
+                                        <dd>产品(服务)查询展示型、品牌宣传型、网上商城政府门户信息型</dd>
+                                    </a>
+                                </li>
+                                <li class="two-item">
+                                    <a class="two-link">
+                                        <img src="./img/icon_33.png" alt="3" class="two-img">
+                                        <dt>成熟产品+二次开发网站更稳定更安全</dt>
+                                        <dd>产品成熟、网站系统定制开发、多项自主知识产权</dd>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-part-thr">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">我们积累了各行业丰富的经验和案例</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">优赞可为企业提供一体化APP解决方案，并注重技术成长和产品体验。通过成熟稳定的技术方式，帮助运营者覆盖更多用户场景，轻松应对包括营销、运维在内的多种技术挑战。促进有效流量的吸收和转换，展现品牌形象理念，满足企业管理、运营、营销等多样化诉求。</span>
+                            <span class="title-des">目前，优赞科技作为移动互联网领域提供一站式的多平台解决方案领导者，服务超过800位海内外客户，当中包括众多知名品牌、国际品牌。</span>
+                        </div>
+                        <div class="con-main">
+                            <ul>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/img_6.png" alt="混合开发">
+                                        <dt>牌猫</dt>
+                                        <dd>牌猫app是中国第一款牌友社交APP，是一种针对牌友的社交方式。寻找身边的在线牌友，还可以线上观看牌艺名师视频，线下预约并欣赏牌艺名师的牌技表演。</dd>
+                                    </a>
+                                </li>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/img_7.png" alt="IOS开发">
+                                        <dt>海丰快贷</dt>
+                                        <dd>海丰快贷app是一款帮助用户快速贷款的软件，包含借款、还款、记录等服务模块，用户可以按需求自主选择借款金额，解决你的燃眉之需。</dd>
+                                    </a>
+                                </li>
+                                <li class="thr-item">
+                                    <a class="thr-link">
+                                        <img src="./img/img_8.png" alt="安卓开发">
+                                        <dt>奢站</dt>
+                                        <dd>奢站app是一款二手奢侈品购物应用，海量二手奢侈品在线预览，满足用户需求，并且用户也可以在平台发布闲置的奢侈品或在线售卖，方便实用。</dd>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-us">
+                    <div class="part-box">
+                        <h3 class="contact-title">
+                            <div class="title-zh">联系我们</div>
+                            <div class="title-en">CONTACT US</div>
+                        </h3>
+                        <div class="contact-des">马上提交需求，我们会在24小时内联系您，并提供产品咨询和项目报价！</div>
+                        <span class="submit-xuqiu">
+                            <a href="#" class="submit-link">提交需求</a>
+                        </span>
+                    </div>
+                </div>
+            </section>
+            <!-- footer -->
+            <footer class="footer">
+                <div class="part-box">
+                    <div class="col-one">
+                        <h1 class="title">相关链接</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">项目案例</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">关于我们</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">提交需求</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">加入我们</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-two">
+                        <h1 class="title">优赞服务</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="./fw_app.html" class="footer-link">APP开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_web.html" class="footer-link">网站定制</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_wechat.html" class="footer-link">微信开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_ui.html" class="footer-link">UI设计</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_game.html" class="footer-link">H5游戏开发</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-thr">
+                        <h1 class="title">行业新闻</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">APP开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">微信开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">UI设计</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">营销推广</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">常见问题</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-four">
+                        <h1 class="title">关于优赞</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">公司介绍</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">联系我们</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">团队服务</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">企业动态</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-five">
+                        <h1 class="title">联系我们</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a class="footer-link">187-5510-5171</a>
+                            </li>
+                            <li class="footer-item">
+                                <a class="footer-link">980086844@qq.com</a>
+                            </li>
+                            <li class="footer-item wechat">
+                                <a class="footer-link">公众号微信号</a>
+                                <img src="./img/code.png" alt="二维码">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
     <!-- 主入口 -->
-    <script src="./js/index.js" type="javascript/text"></script>
+    <script src="./js/index.js"></script>
+    <!-- 动画 -->
+    <script src="./js/animation.js"></script>
 
 </body>
 
