--- a/index.html
+++ b/index.html
@@ -22,54 +22,53 @@
             <header class="top-head">
                 <!-- 导航 -->
                 <div class="nav">
-                    <div class="nav-box">
-                        <div class="nav-left">
-                            <a href="#">
-                                <img src="./img/logo.png" alt="有赞科技">
-                            </a>
-                        </div>
-                        <div class="nav-right">
-                            <ul class="nav-list">
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">首页</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">案例</a>
-                                    <div class="nav-hid">
-                                        <ul class="hid-list">
-                                            <li class="hid-item">
-                                                <a href="./fw_app.html" class="hid-link">APP开发</a>
-                                            </li>
-                                            <li class="hid-item">
-                                                <a href="./fw_web.html" class="hid-link">网站定制</a>
-                                            </li>
-                                            <li class="hid-item">
-                                                <a href="./fw_wechat.html" class="hid-link">微信开发</a>
-                                            </li>
-                                            <li class="hid-item">
-                                                <a href="./fw_ui.html" class="hid-link">UI设计</a>
-                                            </li>
-                                            <li class="hid-item">
-                                                <a href="./fw_game.html" class="hid-link">H5游戏开发</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">行业新闻</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">关于我们</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link">提交需求</a>
-                                </li>
-                            </ul>
-                            <ul class="nav-bar"></ul>
+                        <div class="nav-box">
+                            <div class="nav-left">
+                                <a href="./index.html">
+                                    <img src="./img/logo.png" alt="有赞科技">
+                                </a>
+                            </div>
+                            <div class="nav-right">
+                                <ul class="nav-list">
+                                    <li class="nav-item">
+                                        <a href="./index.html" class="nav-link">首页</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link">案例</a>
+                                        <div class="nav-hid">
+                                            <ul class="hid-list">
+                                                <li class="hid-item">
+                                                    <a href="./fw_app.html" class="hid-link">APP开发</a>
+                                                </li>
+                                                <li class="hid-item">
+                                                    <a href="./fw_web.html" class="hid-link">网站定制</a>
+                                                </li>
+                                                <li class="hid-item">
+                                                    <a href="./fw_wechat.html" class="hid-link">微信开发</a>
+                                                </li>
+                                                <li class="hid-item">
+                                                    <a href="./fw_ui.html" class="hid-link">UI设计</a>
+                                                </li>
+                                                <li class="hid-item">
+                                                    <a href="./fw_game.html" class="hid-link">H5游戏开发</a>
+                                                </li>
+                                            </ul>
+                                        </div>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link">行业新闻</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="./about_us.html" class="nav-link">关于我们</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link">提交需求</a>
+                                    </li>
+                                </ul>
+                                <ul class="nav-bar"></ul>
+                            </div>
                         </div>
                     </div>
-
-                </div>
                 <!-- banner轮播 -->
                 <div class="swiper-banner">
                     <div class="s-con-banner">
@@ -459,7 +458,7 @@
                                 <a class="footer-link">公众号微信号</a>
                                 <img src="./img/code.png" alt="二维码">
                             </li>
-                        </ul>>
+                        </ul>
                     </div>
                 </div>
             </footer>
