--- a/fw_wechat.html
+++ b/fw_wechat.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <title>合肥app开发公司|合肥小游戏开发|合肥小程序开发|APP开发|合肥软件公司-安徽优赞科技有限公司</title>
@@ -11,20 +11,311 @@
     ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/index.css">
-    <link rel="stylesheet" href="./css/swiper.min.css">
+    <link rel="stylesheet" href="./css/fw.css">
     <script src="./js/jquery-3.3.1.js"></script>
 
 </head>
 
 <body>
+    <div id="fw_wrp">
+        <div class="fw-box">
+            <header class="top-head">
+                <!-- 导航 -->
+                <div class="nav">
+                    <div class="nav-box">
+                        <div class="nav-left">
+                            <a href="#">
+                                <img src="./img/logo.png" alt="有赞科技">
+                            </a>
+                        </div>
+                        <div class="nav-right">
+                            <ul class="nav-list">
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">首页</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">案例</a>
+                                    <div class="nav-hid">
+                                        <ul class="hid-list">
+                                            <li class="hid-item">
+                                                <a href="./fw_app.html" class="hid-link">APP开发</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_web.html" class="hid-link">网站定制</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_wechat.html" class="hid-link">微信开发</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_ui.html" class="hid-link">UI设计</a>
+                                            </li>
+                                            <li class="hid-item">
+                                                <a href="./fw_game.html" class="hid-link">H5游戏开发</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">行业新闻</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">关于我们</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link">提交需求</a>
+                                </li>
+                            </ul>
+                            <ul class="nav-bar"></ul>
+                        </div>
+                    </div>
 
+                </div>
+                <!-- 服务与优势 banner -->
+                <div class="fw-banner">
+                    <div class="s-con-banner">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide swiper-slide-active">
+                                <div class="banner-img" style="background-image:url(./img/fuwu_banner.jpg);"></div>
+                            </div>
+                        </div>
+                        <!-- Add Pagination -->
+                        <div class="swiper-pagination swiper-pagination-bullets"></div>
+                        <span class="swiper-notification" aria-live="assertive" aria-atomic="true"></span>
+                    </div>
+                </div>
+            </header>
+            <!-- 主要内容 -->
+            <section class="main-content">
+                <div class="con-part-one">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">优赞科技为您提供的服务</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">一体化的互联网+技术解决方案，让您的项目快速启动、完美落地</span>
+                        </div>
+                        <div class="con-main">
+                            <ul>
+                                <li class="one-main-item">
+                                    <a href="./fw_app.html" class="one-main-link">
+                                        <img src="./img/icon_1.png" alt="APP开发">
+                                    </a>
+                                    <dt>APP开发</dt>
+                                </li>
+                                <li class="one-main-item">
+                                    <a href="./fw_web.html" class="one-main-link">
+                                        <img src="./img/icon_2.png" alt="网站定制">
+                                    </a>
+                                    <dt>网站定制</dt>
+                                </li>
+                                <li class="one-main-item">
+                                    <a href="./fw_wechat.html" class="one-main-link">
+                                        <img src="./img/icon_3.png" alt="微信开发">
+                                    </a>
+                                    <dt>微信开发</dt>
+                                </li>
+                                <li class="one-main-item">
+                                    <a href="./fw_ui.html" class="one-main-link">
+                                        <img src="./img/icon_4.png" alt="UI设计">
+                                    </a>
+                                    <dt>UI设计</dt>
+                                </li>
+                                <li class="one-main-item">
+                                    <a href="./fw_game.html" class="one-main-link">
+                                        <img src="./img/icon_5.png" alt="H5游戏开发">
+                                    </a>
+                                    <dt>H5游戏开发</dt>
+                                </li>
 
+                            </ul>
+                        </div>
+                    </div>
 
-    <!-- 轮播 -->
-    <script src="./js/swiper.min.js" type="javascript/text"></script>
+                </div>
+                <div class="con-part-two">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <div class="title-box">
+                                    <h3 class="title-text">我们不仅重视工作的效率</h3>
+                                    <h3 class="title-text">更加重视产品的质量</h3>
+                                </div>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">优赞科技为您提供1对1业务咨询，助您快速解决业务问题</span>
+                        </div>
+                        <div class="con-main">
+                            <ul>
+                                <li class="two-main-item">
+                                    <img src="./img/icon_8.png" alt="实战派" class="two-img">
+                                    <dt>实战派</dt>
+                                    <dd>海量互联网产品全模式开发经验累积，从0到1产品整个生命周期全程服务</dd>
+                                </li>
+                                <li class="two-main-item">
+                                    <img src="./img/icon_7.png" alt="精品工程" class="two-img">
+                                    <dt>精品工程</dt>
+                                    <dd>专注于移动互联网领域，服务超过300位海内外客户百余项精品案例</dd>
+                                </li>
+                                <li class="two-main-item">
+                                    <img src="./img/icon_6.png" alt="体验驱动创新" class="two-img">
+                                    <dt>体验驱动创新</dt>
+                                    <dd>寻找用户、商业和技术平衡点，实现用户与企业核心价值的匹配</dd>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="con-part-thr">
+                    <div class="part-box">
+                        <div class="con-title">
+                            <div class="title-main">
+                                <img src="./img/img_2.png" alt="---" class="img-left">
+                                <h3 class="title-text">我们如何创造出一款产品</h3>
+                                <img src="./img/img_1.png" alt="---" class="img-right">
+                            </div>
+                            <span class="title-des">4步服务流程，简单、快速、保质完成您的产品</span>
+                        </div>
+                        <div class="con-main">
+                            <div class="thr-left">
+                                <div class="thr-left-top">
+                                    <h4 class="thr-title">产品咨询</h4>
+                                    <dd class="dd-left">通过产品咨询，产品经理会为您梳理需求提供产品解决方案以及原型设计。</dd>
+                                </div>
+                                <div class="thr-left-bot">
+                                    <h4 class="thr-title">产品咨询</h4>
+                                    <dd class="dd-left">通过产品咨询，产品经理会为您梳理需求提供产品解决方案以及原型设计。</dd>
+                                </div>
+                            </div>
+                            <img src="./img/img_3.png" alt="产品" class="thr-mid">
+                            <div class="thr-right">
+                                <div class="thr-right-top">
+                                    <h4 class="thr-title">UI设计</h4>
+                                    <dd class="dd-right">设计师根据产品特性和属性进行UI设计，提升产品体验。</dd>
+                                </div>
+                                <div class="thr-right-bot">
+                                    <h4 class="thr-title">测试上线</h4>
+                                    <dd class="dd-right">通过内部测试和第三方专业测试，及时发现修复BUG，顺利部署上线。</dd>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-us">
+                    <div class="part-box">
+                        <h3 class="contact-title">
+                            <div class="title-zh">联系我们</div>
+                            <div class="title-en">CONTACT US</div>
+                        </h3>
+                        <div class="contact-des">马上提交需求，我们会在24小时内联系您，并提供产品咨询和项目报价！</div>
+                        <span class="submit-xuqiu">
+                            <a href="#" class="submit-link">提交需求</a>
+                        </span>
+                    </div>
+                </div>
+            </section>
+            <!-- footer -->
+            <footer class="footer">
+                <div class="part-box">
+                    <div class="col-one">
+                        <h1 class="title">相关链接</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">项目案例</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">关于我们</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">提交需求</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">加入我们</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-two">
+                        <h1 class="title">优赞服务</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="./fw_app.html" class="footer-link">APP开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_web.html" class="footer-link">网站定制</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_wechat.html" class="footer-link">微信开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_ui.html" class="footer-link">UI设计</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="./fw_game.html" class="footer-link">H5游戏开发</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-thr">
+                        <h1 class="title">行业新闻</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">APP开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">微信开发</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">UI设计</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">营销推广</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">常见问题</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-four">
+                        <h1 class="title">关于优赞</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">公司介绍</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">联系我们</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">团队服务</a>
+                            </li>
+                            <li class="footer-item">
+                                <a href="#" class="footer-link">企业动态</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-five">
+                        <h1 class="title">联系我们</h1>
+                        <ul>
+                            <li class="footer-item">
+                                <a class="footer-link">187-5510-5171</a>
+                            </li>
+                            <li class="footer-item">
+                                <a class="footer-link">980086844@qq.com</a>
+                            </li>
+                            <li class="footer-item wechat">
+                                <a class="footer-link">公众号微信号</a>
+                                <img src="./img/code.png" alt="二维码">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </div>
     <!-- 主入口 -->
-    <script src="./js/index.js" type="javascript/text"></script>
+    <script src="./js/index.js"></script>
+    <!-- 动画 -->
+    <script src="./js/animation.js"></script>
 
 </body>
 
